# osobni_wf

./: .dockerignore  .gitignore  .gitmodules  BRANCH_ANALYSIS_REPORT.md  BRANCH_CLEANUP_REPORT.md  DEPLOY.md  GEMINI.md  LESSONS_LEARNED.md  Nápady.pwf.md  README.md  TODO.md  analyze_branches.py  audio_dialog_timeout.html  auth_debug.json  debug_dump.html  deleted_files.txt  extract_method.py  insert_method.py  knip.json  launch_delegations.sh  launch_delegations_clean.sh  merge_branches.py  package-lock.json  package.json  pending_sessions.json  pr87_retry3.json  pr_list.json  proj5.patch  pwf.TODO.md  pwf.view.md  pwf.views.md  scan_results.json  scan_results_afk.json  scan_results_consolidated.json  scan_sessions.py  session_states.txt  stepsDone.md  test.md  toInstall.md  tools145.json  (+3 more)
agents/proj/: README.md  pyproject.toml
agents/proj/docs/: workflows.md
agents/proj/proposals/: 01_fast_context_mapper.md
agents/proj/src/proj/: __init__.py  agent.py  cli.py  persistence.py  server.py  state.py
agents/proj/tests/: test_basics.py  test_integration.py  test_persistence_logic.py  test_resume.py  test_review.py
agents/questDiscov/: .env.example  README.md  Strategie Generování Výzkumných Otázek_ Od Algoritmů po Neuro-symbolickou AI.txt  pyproject.toml
agents/questDiscov/docs/: implementation_plan_mvp.md  wbs_mvp.md
agents/questDiscov/docs/features/: 00_feature_index.md  F-001_knowledge_graph_foundation.md  F-002_entity_relationship_extraction.md  F-010_topological_sorting.md  F-011_centrality_metrics.md  F-020_uncertainty_sampling.md  F-023_question_priority_pipeline.md  F-032_rl_graph_navigation.md  F-040_planner_executor_critic.md  F-041_graphrag.md  F-050_obsidian_integration.md  F-051_windmill_orchestration.md
agents/questDiscov/questDiscov/: agent.py  dispatcher.py  graph.py  priority.py
agents/questDiscov/questDiscov/tools/: obsidian_tools.py  priority_tools.py  rsrch_tools.py
agents/questDiscov/src/: __init__.py  algorithms.py  cli.py
agents/questDiscov/src/questDiscov/: cli.py  youtrack.py
agents/questDiscov/src/tools/: __init__.py  graph_tools.py
agents/questDiscov/tests/: __init__.py  test_algorithms.py  test_graph.py
infrastruct/configs/youtrack.conf/: .gitignore  LESSONS.md  README.md  pyproject.toml  run_demo.sh
infrastruct/configs/youtrack.conf/docs/: ARCH_PLAN_CS.md  PROPOSAL_reports_iac.md  agile_boards_api.md  (+4 more)
(+967 files in other folders)
