[project]
name = "proj"
version = "0.1.0"
description = "Personal project management agent using LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
proj = "proj.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proj"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
