[project]
name = "questDiscov"
version = "0.1.0"
description = "Research question prioritization agent using LangGraph"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "falkordb>=1.0.0",
    "networkx>=3.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
questDiscov = "questDiscov.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "questDiscov"

[tool.ruff]
line-length = 100
target-version = "py311"
