[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logic-driven-iac"
version = "0.1.0"
description = "Model-based configuration management for YouTrack using logic programming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "janus-swi>=1.3.0",
]

[project.scripts]
ldi = "src.controller.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
